--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h2 {
     justify-content: space-around;
     margin: 20px auto;
     border-radius: 20px;
-    background-image: linear-gradient(to left top, #c777b9,#6a6df198,#4f2ee4,#545ef3, #5ffbf1);
+    background-color: #545ef3;
     box-shadow: 
     12px 12px 16px 0 rgba(0, 0, 0, 0.25),
     -8px -8px 15px 0 rgba(144, 175, 235, 0.3);
