--- a/style.css
+++ b/style.css
@@ -3,33 +3,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 html {
     width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 body {
     background-image: linear-gradient(to left top, #c777b9,#6a6df198,#4f2ee4,#545ef3, #5ffbf1);
     width: 100%;
 }
-
 #country {
     height: 40px;
 }
-
 h1 {
-    color: #545ef3;
-    text-shadow: 2px 2px 2px rgba(255,255,255,0.3),
-              -2px -2px 2px rgba(0,0,0,0.25);
-    
+    color: #fff;
+    font-size: 3rem;
+    margin-top: 8%;
 }
-
 h2 {
     font-family: 'Vidaloka', serif;
 }
-
 .container {
     height: 93vh;
     max-width: 83%;
@@ -40,12 +33,13 @@ h2 {
     margin: 20px auto;
     border-radius: 20px;
     background-color: #545ef3;
+    color: #fff;
+    font-size: 1.5rem;
     box-shadow: 
     12px 12px 16px 0 rgba(0, 0, 0, 0.25),
     -8px -8px 15px 0 rgba(144, 175, 235, 0.3);
 
 }
-
 .header-part {
     width: 90%;
     text-align: center;
@@ -57,7 +51,8 @@ h2 {
 /* Search Part */
 .searchBar {
     background-color: #545ef3;
-    width: 235px;
+    width: 40%;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,26 +61,21 @@ h2 {
     12px 12px 16px 0 rgba(0, 0, 0, 0.25),
     -5px -3px 10px 0 rgba(255, 255, 255, 0.3);
 }
-
 .searchBar span {
     margin: 0 auto;
 }
-
 .searchBar img {
     background-color: #545ef3;
 }
-
 .searchBar input {
-    background-color: #545ef3;
-    color: white;
     padding-left: 10px;
     border: none;
-    width: 170px;
-    font-size: 0.9rem;
+    width: 70%;
+    height: 40px;
+    font-size: 1.6rem;
     box-shadow: inset 3px 3px 10px 0 rgba(0, 0, 0, 0.2),
     inset -3px -1px 8px 0 rgba(255, 255, 255, 0.5);
 }
-
 .searchBar button {
     background-color: unset;
     cursor: pointer;
@@ -93,9 +83,9 @@ h2 {
 
 }
 ::placeholder {
-    color: white;
+    
     opacity: 0.5;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
     padding-left: 5px;
 }
 
@@ -110,7 +100,6 @@ h2 {
     justify-content: center;
     visibility: hidden;
 }
-
 .history-part {
     background-color: #545ef3;
     width: 75%;
@@ -122,12 +111,12 @@ h2 {
     justify-content: center;
     visibility: hidden;
 }
-
 #searchBtn {
     background-color: unset;
-    width: 85px;
-    height: 30px;
-    color: #eee;
+    width: 20%;
+    height: 40px;
+    color: #fff;
+    font-size: 1.3rem;
     cursor: pointer;
     border-radius: 20px;
     border: 0.2px ridge #4f2ee491;
@@ -137,20 +126,16 @@ h2 {
     -3px -3px 10px 0 rgba(255, 255, 255, 0.3);
     background: linear-gradient(-45deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
 }
-
 #searchBtn:focus {
     outline: 0;
 }
-
 #searchBtn:active {
     box-shadow: inset 3px 3px 8px 0 rgba(0, 0, 0, 0.2),
     inset -3px -3px 8px 0 rgba(255, 255, 255, 0.5);
 }
-
 .show {
     visibility: visible;
 }
-
 .closeBtn {
     top: 0;
     right: 0;
@@ -159,14 +144,11 @@ h2 {
     background-color: transparent;
     border: none;
 }
-
 .lable {
-    color: #120742;
     font-size: 1.2rem;
     margin: 10px auto;
     text-align: center;
 }
-
 .lable::after {
     display: block;
     content: '';
@@ -175,16 +157,13 @@ h2 {
     background-color: #120742;
     margin: 7px auto;
 }
-
 .history-menu {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .history-menu li {
-    color: #fff;
     list-style-type: none;
     margin: 10px auto;
 }
@@ -194,47 +173,42 @@ h2 {
     width: 90%;
     height: 30%;
     display: flex;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgb(0 0 0 / 20%);
 }
-
 .current-temp {
     width: 70%;
 }
-
 .min-max-part {
     width: 30%;
     display: grid;
     align-items: center;
     justify-content: center;
     font-size: 1.5rem;
-    color: rgb(25, 9, 100);
 }
-
 .min-max-part span {
-    font-size: 0.7rem;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    font-weight: bold;
 }
-
 #tempreture {
     font-size: 2rem;
     text-align: center;
-    color: rgb(25, 9, 100);
     padding-left: 10px;
 }
-
 #icon {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 40%;
 }
-
 #icon img {
     height: 100px;
 }
-
 .line {
     height: 2px;
     width: 40px;
-    background-color: rgb(25, 9, 100);
+    background-color: #fff;
 }
 
 
@@ -242,8 +216,8 @@ h2 {
 .weekForecast-part {
     display: flex;
     width: 100%;
+    padding-bottom: 20px;
 }
-
 .day {
     font-size: 10px;
     margin: 0 auto;
@@ -253,19 +227,11 @@ h2 {
     flex: auto;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    box-shadow: 
-    1px 0.5px 5px 0 rgba(0, 0, 0, 0.15),
-    -4px -4px 12px 0 rgba(255, 255, 255, 0.3);
-    
 }
-
-.day:first-child {
-    box-shadow: 
-    1px 0.5px 5px 0 rgba(0, 0, 0, 0.25),
-    -4px -4px 12px 0 rgba(255, 255, 255, 0.3);
-}
-
 .day-tempreture {
     margin-top: 10px;
-    font-size: initial;
+    font-size: 1.5rem;
+}
+.date {
+    font-size: 1.2rem;
 }
