--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2 {
     justify-content: space-around;
     margin: 20px auto;
     border-radius: 20px;
-    background-color: #272f9ebd;
+    background-color: #4b52dc;
     color: #fff;
     font-size: 1.5rem;
     box-shadow: 
