--- a/style.css
+++ b/style.css
@@ -7,37 +7,50 @@ html {
     width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
 }
 body {
-    background-image: linear-gradient(to left top, #c777b9,#6a6df198,#4f2ee4,#545ef3, #5ffbf1);
+    /* background-image: linear-gradient(to left top, #c777b9,#6a6df198,#4f2ee4,#545ef3, #5ffbf1); */
+    background-color: #fff;
     width: 100%;
+    font-family: 'Work Sans', sans-serif;
 }
 #country {
     height: 40px;
 }
 h1 {
-    color: #fff;
-    font-size: 3rem;
-    margin-top: 8%;
+    font-size: 2rem;
+    letter-spacing: 5px;
+    margin: 10px auto;
+    text-transform: uppercase;
 }
-h2 {
-    font-family: 'Vidaloka', serif;
+.blur {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 200px;
+    height: 200px;
+    filter: blur(70px);
+    border-radius: 50%;
+    background-color: #399cde;
 }
 .container {
-    height: 93vh;
-    max-width: 83%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    margin: 20px auto;
-    border-radius: 20px;
-    background-color: #4b52dc;
-    color: #fff;
-    font-size: 1.5rem;
-    box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -8px -8px 15px 0 rgba(144, 175, 235, 0.3);
+    width: 80%;
+        height: 600px;
+        margin: auto;
+        box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+        border-radius: 15px;
+        background: rgba(255, 255, 255, 0.1);
+        border-top: 1px solid rgba(255,255,255,0.5);
+        border-left: 1px solid rgba(255,255,255,0.5);
+        backdrop-filter: blur(5px);
+        color: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 1;
 
 }
 .header-part {
@@ -45,12 +58,12 @@ h2 {
     text-align: center;
     padding: 10px 0;
     margin-top: 10px;
-    color: #eee;
+    color: #9e9e9e;
 }
 
 /* Search Part */
 .searchBar {
-    background-color: #545ef3;
+    background-color: #9e9e9e;
     width: 40%;
     height: 50px;
     display: flex;
@@ -60,12 +73,10 @@ h2 {
     box-shadow: 
     12px 12px 16px 0 rgba(0, 0, 0, 0.25),
     -5px -3px 10px 0 rgba(255, 255, 255, 0.3);
+    margin-bottom: 10px;
 }
 .searchBar span {
     margin: 0 auto;
-}
-.searchBar img {
-    background-color: #545ef3;
 }
 .searchBar input {
     padding-left: 10px;
@@ -115,8 +126,10 @@ h2 {
     background-color: unset;
     width: 20%;
     height: 40px;
-    color: #fff;
-    font-size: 1.3rem;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 600;
     cursor: pointer;
     border-radius: 20px;
     border: 0.2px ridge #4f2ee491;
